--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "parse": "^1.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "parse": "^1.6"
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
